[package]
name = "viabase"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "*"
http-body-util = "*"
hyper = { version = "*", features = ["full"] }
tokio = { version = "*", features = ["full"] }
tower = { version = "*", features = ["util", "filter"] }
tracing = "*"
tracing-subscriber = { version = "*", features = ["env-filter"] }
anyhow = "*"
sqlx = { version = "*", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
chrono = "*"